# PotooMaps

./: .gitignore  CMakeLists.txt  ReadMe.md  dict.c  dict.h  graph.c  graph.h  graphList.c  graphMat.c  intList.h  jsonTemplate.json  main.c  municipalities.h  path.c  path.h  poi.c  poi.h  settings.h
Data/: map.geojson
